# rs-zip2pgcopy2tables

./: Cargo.toml  README.md  rs-zip2pgcopy2tables  run.sh
sample.d/: tab1.pgcopy  tab2.pgcopy
src/: lib.rs  main.rs
