[package]
name = "rs-zip2pgcopy2tables"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[dependencies.zip]
version = "2.6.1"
default-features = false
features = [
	"deflate",
]

[dependencies.postgres]
version = "0.19.10"
default-features = false
features = [
]
